--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "date-fns": "^4.1.0",
     "esbuild": "^0.25.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15"
